[gd_scene load_steps=4 format=2]

[ext_resource path="res://Source/Entities/Script/MeleeAttack.gd" type="Script" id=1]
[ext_resource path="res://Resources/Art/start-assets/portal.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 52.078

[node name="MeleeAttack" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="portal" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.534291, 0.487754 )
texture = ExtResource( 2 )

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
